<resources>
    <string name="app_name">Shopping List</string>
    <string name="add_item">Add Item</string>
    <string name="milk">Milk</string>
    <string name="eggs">Eggs</string>
    <string name="cheese">Cheese</string>
    <string name="bread">Bread</string>
    <string name="meat">Meat</string>
    <string name="butter">Butter</string>
    <string name="lettuce">Lettuce</string>
    <string name="carrots">Carrots</string>
    <string name="donuts">Donuts</string>
    <string name="coffee">Coffee</string>
    <string name="go_back">Go Back</string>
</resources>
